--- a/index.css
+++ b/index.css
@@ -170,7 +170,7 @@ main {
 button {
     margin-top: .5rem;
     font-family: 'MedievalSharp', cursive;
-    background-color: #fcc02a;
+    background-color: #fcc02aec;
     border: 2px solid #963404;
     outline: none;
     padding-left:5vw;
@@ -181,7 +181,7 @@ button {
     font-size: 1.5rem;
     border-radius: 6px;
     cursor: pointer;
-    color:#963404;
+    color:#ad3e07;
     height:9vh;
     box-shadow: 0px 6px 10px -4px rgba(0,0,0,0.4);
 }
